# mara

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  metrics.rs
crates/api/: Cargo.toml
crates/api/src/: clearance.rs  client.rs  dashboard.html  doctor.rs  egress.rs  introspect.rs  ladder.rs  lib.rs  mullvad.rs  policy.rs  pool.rs  slim.rs  store.rs  worker.rs
crates/api/tests/: live.rs  slim_mock.rs
crates/core/: Cargo.toml
crates/core/src/: classify.rs  clearance.rs  lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: browser.rs  capture.rs  challenge.rs  click.rs  display.rs  frame.rs  lib.rs  locate.rs  settle.rs
docs/: bulk-api.md  decouple-solve-from-serve.md
examples/scrape_fragrantica/: README.md  decrypt.rs  main.rs  parse.rs
src/: classify.rs  client.rs  dashboard.html  doctor.rs  egress.rs  introspect.rs  ladder.rs  lib.rs  main.rs  mullvad.rs  policy.rs  pool.rs  slim.rs  solver.rs  store.rs  worker.rs
src/solver/: browser.rs  capture.rs  challenge.rs  click.rs  display.rs  frame.rs  locate.rs  observe.rs  session.rs  settle.rs
test_data/locate/: expected.txt
tests/: live.rs
