[workspace]
members = ["crates/core", "crates/solver", "crates/api"]

[profile.dev.package."*"]
opt-level = 3

[package]
name = "mara-cli"
version = "0.1.0"
edition = "2024"
default-run = "mara"

[[bin]]
name = "mara"
path = "src/main.rs"

[dependencies]
mara = { path = "crates/api", features = ["mullvad"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
scraper = "0.24"
url = "2"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
base64 = "0.22"
hex = "0.4"
