[package]
name = "mara-cli"
description = "Command-line interface for the mara scraper."
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mara"
path = "src/main.rs"

[dependencies]
mara = { path = ".." }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
