[package]
name = "mara"
version = "0.1.0"
edition = "2024"

[features]
default = []
mullvad = []

[dependencies]
anyhow = "1"
async-channel = "2"
base64 = "0.22"
thiserror = "2"
axum = { version = "0.8", features = ["ws"] }
chromiumoxide = "0.9"
mara-core = { path = "../core" }
mara-solver = { path = "../solver" }
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
wreq = { version = "=6.0.0-rc.29", default-features = false, features = ["tokio-rt", "webpki-roots", "json", "socks", "cookies", "gzip", "brotli", "deflate"] }
wreq-util = { version = "=3.0.0-rc.12", default-features = false, features = ["emulation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "sync", "net"] }
tracing = "0.1"
url = "2"
x11rb = { version = "0.13", features = ["xfixes", "xtest"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
