[package]
name = "mara-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
mara-core = { path = "../core" }
anyhow = "1"
chromiumoxide = "0.9"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "sync", "net"] }
tracing = "0.1"
x11rb = { version = "0.13", features = ["xfixes", "xtest"] }
